Minor spacing fixes

--- a/Style.css
+++ b/Style.css
@@ -309,7 +309,7 @@ body {
     width: 1180px;
     position: absolute;
     top: 70px;
-    left: 320px;
+    left: 310px;
 }
 
 .dashboard h1 {
